# bevytest

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  index.html
.cargo/: config
assets/shaders/: array_texture.wgsl  custom_material.frag  custom_material.vert  triplanar.wgsl
assets/wasm/: bevytest.d.ts  bevytest.js  bevytest_bg.wasm.d.ts
src/: bevy_mod_picking_test.rs  bevy_test.rs  lib.rs  main.rs  mod.rs
src/bevy_skybox/: image.rs  lib.rs  mod.rs
src/camera/: camera.rs  first_person.rs  fly_camera.rs  mod.rs  third_person.rs
src/connector/: mod.rs  net.rs
src/modules/: mod.rs  skybox.rs
src/physics/: manager.rs  mod.rs  player.rs  system.rs  terrain_manager.rs
src/player/: mod.rs
src/utils/: mod.rs
