[package]
name = "rapier_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# bevy = { version = "0.7" }
# bevy_rapier3d = { version="0.13.2", features = [ "simd-stable" ]}

# log = "0.4.17"

wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "Document",
  "ErrorEvent",
  "Element",
  "HtmlCollection",
  "HtmlElement",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Window",
  "Location"
]